# master_thesis_kremmel

master_thesis_ros/catkin_ws/: builder.sh  (+1 more)
master_thesis_ros/catkin_ws/src/icp-demo/: CMakeLists.txt
master_thesis_ros/catkin_ws/src/icp-demo/launch/: start-demo.launch
master_thesis_ros/catkin_ws/src/icp-demo/src/: icp-demo.cpp
master_thesis_ros/catkin_ws/src/master_thesis_kremmel/: CMakeLists.txt
master_thesis_ros/catkin_ws/src/master_thesis_kremmel/config/: gmapping_params.yaml  rviz.rviz  xbox.yaml
master_thesis_ros/catkin_ws/src/master_thesis_kremmel/data/: AngularMovement.csv  AngularMovement2.csv  customworld_stored_landmarks.json  stored_landmarks.json  stored_landmarks_angular_test.json  stored_landmarks_tried_variable_Q copy 2.json
master_thesis_ros/catkin_ws/src/master_thesis_kremmel/launch/: launch.launch  turtlebot3_VLP16.launch
master_thesis_ros/catkin_ws/src/master_thesis_kremmel/models/test_world/: model.sdf
master_thesis_ros/catkin_ws/src/master_thesis_kremmel/results/: SharpTurns.csv  TestDrive.csv  kiss.csv  kiss_1.csv  lange Fahrt.csv  reductionOff_LeafSize-0.csv  reductionOff_LeafSize-1.csv  reductionOff_LeafSize-10.csv  reductionOff_LeafSize-11.csv  reductionOff_LeafSize-12.csv  reductionOff_LeafSize-13.csv  reductionOff_LeafSize-14.csv  reductionOff_LeafSize-15.csv  reductionOff_LeafSize-16.csv  reductionOff_LeafSize-17.csv  reductionOff_LeafSize-18.csv  reductionOff_LeafSize-19.csv  reductionOff_LeafSize-2.csv  reductionOff_LeafSize-20.csv  reductionOff_LeafSize-3.csv  reductionOff_LeafSize-4.csv  reductionOff_LeafSize-5.csv  reductionOff_LeafSize-6.csv  reductionOff_LeafSize-7.csv  reductionOff_LeafSize-8.csv  reductionOff_LeafSize-9.csv  reductionOff_LeafSizeIncreasing.csv  reductionOn.csv  reductionOn_LeafSize-0.csv  reductionOn_LeafSize-1.csv  reductionOn_LeafSize-10.csv  reductionOn_LeafSize-11.csv  reductionOn_LeafSize-12.csv  reductionOn_LeafSize-13.csv  reductionOn_LeafSize-14.csv  reductionOn_LeafSize-15.csv  reductionOn_LeafSize-16.csv  reductionOn_LeafSize-17.csv  reductionOn_LeafSize-18.csv  reductionOn_LeafSize-19.csv  (+20 more)
master_thesis_ros/catkin_ws/src/master_thesis_kremmel/src/: cmdVelSmoother.cpp  ekfSlam.cpp  ekfSlam_test.cpp  evaluator.cpp  landmarkProcessing.cpp  transformLaserScan.cpp
master_thesis_ros/catkin_ws/src/master_thesis_kremmel/srv/: Landmark.srv  MoveRobot.srv
master_thesis_ros/catkin_ws/src/master_thesis_kremmel/worlds/: test_world_ang1.world  test_world_ang2.world  test_world_lin1.world  test_world_lin2.world
(+306 files in other folders)
